--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,11 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
 
+      <a href="#topic" class="btn" target="_self">Topic</a>
       <a href="#schedule" class="btn" target="_self">Schedule</a>
       <a href="#speakers" class="btn" target="_self">Keynote Speakers</a>
       <a href="#organizers" class="btn" target="_self">Organizers</a>
-      
+
     </header>
 
     <main id="content" class="main-content" role="main">
