add back to top

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,13 @@
 
     </header>
 
+    <script src="assets/js/vanilla-back-to-top.min.js"></script>
+    <script>addBackToTop({
+      diameter: 56,
+      backgroundColor: 'rgb(0, 0, 0)',
+      textColor: '#fff'
+    })</script>
+
     <main id="content" class="main-content" role="main">
       {{ content }}
 
